# embedded-wasmi

./: Cargo.toml  README.md
src/: main.rs
