[package]
name = "wasmi-runtime"
version = "0.1.0"
authors = ["Tim Caswell <tim@creationix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = "0.6.2"
# wabt = "0.9.2"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
